--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -8,12 +8,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
         integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
     <link rel="stylesheet" href="/css/style.css">
-    <title>StoryBooks</title>
+    <title>Yatra</title>
 </head>
 
 <body>
     {{> _header}}
-    {{> _add_btn}}
     <div class="container">
         {{{body}}}
     </div>
